# copilot

./: .gitignore  .gitmodules  .stan.toml  .travis.yml  .typos.toml  CHANGELOG  Equality.lhs  Eval.hs  Incremental.hs  LICENSE  LICENSE.md  LICENSE.txt  Makefile  README  README.md  Setup.hs  TODO  cabal.project  copilot-c99.cabal  copilot-cbackend.cabal  copilot-core.cabal  copilot-kind.cabal  copilot-language.cabal  copilot-libraries.cabal  copilot-theorem.cabal  copilot.cabal  index.html  make-haddock.sh  proc0.c  proc0.h  proc1.c  proc1.h  proc2.c  proc2.h  runtest  test.sh
Bugs/: README  comp.txt  interp.txt  prog1.txt
Examples/: Array.hs  (+29 more)
copilot/: CHANGELOG  README.md  copilot.cabal  default.nix
copilot-bluespec/: .dockerignore  CHANGELOG  DESIGN.md  Dockerfile  LICENSE  README.md  copilot-bluespec.cabal  default.nix  shell.nix
copilot-bluespec/nix/: sources.json
copilot-bluespec/src/Copilot/Compile/: Bluespec.hs
copilot-bluespec/src/Copilot/Compile/Bluespec/: CodeGen.hs  Compile.hs  Error.hs  Expr.hs  External.hs  FloatingPoint.hs  Name.hs  Representation.hs  Settings.hs  Type.hs
copilot-bluespec/tests/: Main.hs
copilot-bluespec/tests/Test/Copilot/Compile/: Bluespec.hs
copilot-bluespec/tests/Test/Copilot/Compile/Bluespec/: External.hs
copilot-c99/: .stan.toml  CHANGELOG  README.md  copilot-c99.cabal  default.nix
copilot-c99/src/Copilot/Compile/: C99.hs
copilot-c99/src/Copilot/Compile/C99/: CodeGen.hs  Compile.hs  Error.hs  Expr.hs  External.hs  Name.hs  Representation.hs  Settings.hs  Translate.hs  Type.hs  Util.hs
copilot-c99/src/Copilot/Compile/C99/Compile/: Internal.hs
copilot-c99/src/Copilot/Compile/C99/Settings/: Internal.hs
copilot-c99/tests/: Main.hs
copilot-c99/tests/Test/Copilot/Compile/: C99.hs
copilot-core/: CHANGELOG  README.md  copilot-core.cabal  default.nix  shell.nix
copilot-core/src/Copilot/: Core.hs
copilot-core/src/Copilot/Core/: Error.hs  ErrorInternal.hs  Expr.hs  External.hs  Interpret.hs  Locals.hs  Operators.hs  PrettyDot.hs  PrettyPrint.hs  Spec.hs  Type.hs
copilot-core/src/Copilot/Core/Interpret/: Eval.hs  Render.hs  RenderInternal.hs
copilot-core/src/Copilot/Core/Type/: Array.hs  Dynamic.hs  Eq.hs  Equality.hs  Read.hs  Show.hs  ShowInternal.hs  Uninitialized.hs
copilot-core/tests/: Main.hs
copilot-core/tests/Test/: Extra.hs
copilot-core/tests/Test/Copilot/Core/: Error.hs  External.hs  Type.hs
copilot-core/tests/Test/Copilot/Core/Interpret/: Eval.hs
copilot-core/tests/Test/Copilot/Core/Type/: Array.hs  Dynamic.hs  Show.hs
copilot-interpreter/: CHANGELOG  README.md  copilot-interpreter.cabal  default.nix  shell.nix
copilot-interpreter/src/Copilot/: Interpret.hs
copilot-interpreter/src/Copilot/Interpret/: Error.hs  Eval.hs  Render.hs
copilot-interpreter/tests/: Main.hs
copilot-interpreter/tests/Test/Copilot/Interpret/: Eval.hs
copilot-language/: CHANGELOG  README.md  copilot-language.cabal  default.nix  hie.yaml  shell.nix
copilot-language/src/: Copilot.hs
copilot-language/src/Copilot/: Language.hs
copilot-language/src/Copilot/Language/: Analyze.hs  Error.hs  Interpret.hs  Prelude.hs  Reify.hs  Spec.hs  Stream.hs
copilot-language/src/Copilot/Language/Operators/: Array.hs  BitWise.hs  Boolean.hs  Cast.hs  Constant.hs  Eq.hs  Extern.hs  Integral.hs  Label.hs  Local.hs  Mux.hs  Ord.hs  Projection.hs  Propositional.hs  Struct.hs  Temporal.hs
copilot-language/src/System/Mem/StableName/: Dynamic.hs  Map.hs
copilot-language/tests/: Main.hs
copilot-language/tests/Test/: Extra.hs
copilot-language/tests/Test/Copilot/Language/: Reify.hs
copilot-libraries/: CHANGELOG  README.md  copilot-libraries.cabal  default.nix  shell.nix
copilot-libraries/tests/: Main.hs
copilot-libraries/tests/Test/: Extra.hs
copilot-prettyprinter/: CHANGELOG  README.md  copilot-prettyprinter.cabal  default.nix  hie.yaml  shell.nix
copilot-prettyprinter/src/Copilot/: PrettyPrint.hs
copilot-prettyprinter/src/Copilot/PrettyPrint/: Error.hs  Type.hs
copilot-theorem/: CHANGELOG  README.md  copilot-theorem.cabal  default.nix  shell.nix
copilot-theorem/examples/: BoyerMoore.hs  Grey.hs  Incr.hs  SerialBoyerMoore.hs  SphericalWCV.hs  Trig.hs  WCV.hs
copilot-theorem/src/Copilot/: Theorem.hs
copilot-theorem/src/Copilot/Theorem/: IL.hs  Kind2.hs  Prove.hs  TransSys.hs  What4.hs
copilot-theorem/src/Copilot/Theorem/IL/: PrettyPrint.hs  Spec.hs  Transform.hs  Translate.hs
copilot-theorem/src/Copilot/Theorem/Kind2/: AST.hs  Output.hs  PrettyPrint.hs  Prover.hs  Translate.hs
copilot-theorem/src/Copilot/Theorem/Misc/: Error.hs  SExpr.hs  Utils.hs
copilot-theorem/src/Copilot/Theorem/Prover/: Backend.hs  SMT.hs  SMTIO.hs  SMTLib.hs  TPTP.hs  Z3.hs
copilot-theorem/src/Copilot/Theorem/TransSys/: Cast.hs  Invariants.hs  Operators.hs  PrettyPrint.hs  Renaming.hs  Spec.hs  Transform.hs  Translate.hs  Type.hs
copilot-theorem/src/Copilot/Theorem/What4/: Translate.hs
copilot-theorem/tests/: Kind2Main.hs  Main.hs
copilot-theorem/tests/Test/Copilot/Theorem/: Kind2.hs  What4.hs
copilot-visualizer/: CHANGELOG  LICENSE  README.md  copilot-visualizer.cabal  default.nix  shell.nix
copilot-visualizer/data/static_html/: index.html
copilot-visualizer/data/tikz/: tikz.tex
copilot-visualizer/examples/gui/: Main.hs  copilot.css  copilot.js  main.html
copilot-visualizer/examples/tikz/: Heater.hs
copilot-visualizer/src/Copilot/Visualize/: Dynamic.hs  Live.hs  Static.hs  TypedTrace.hs  UntypedTrace.hs
copilot/examples/: AddMult.hs  Array.hs  Cast.hs  Clock.hs  Counter.hs  Engine.hs  Heater.hs  Signum.hs  Structs.hs  StructsUpdateField.hs  Voting.hs  WCV.hs
copilot/examples/fpga/HelloWorld/: HelloWorld.hs  README.md  Top.bs  constraints.xdc  mkTop.v
copilot/examples/what4/: Arithmetic.hs  ArithmeticCounterExamples.hs  Arrays.hs  Propositional.hs  Structs.hs
copilot/src/Language/: Copilot.hs
copilot/src/Language/Copilot/: Main.hs
examples/: BoyerMoore.hs  Driver.hs  Engine.hs  Experiment.hs  Grey.hs  Incr.hs  Mltl.hs  SerialBoyerMoore.hs  Test.hs  Trig.hs  WCV.hs  examples.cabal  kind-examples.cabal
(+537 files in other folders)
