cabal-version             : >= 1.10
name                      : copilot-c99
version                   : 2.1.2
synopsis                  : A compiler for Copilot targeting C99.
description               :
  This package is a back-end from Copilot to the Atom DSL.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.  A tutorial, bug
  reports, and todos are available at
  <https://github.com/leepike/copilot-discussion>.
  .
  Examples are available at
  <https://github.com/leepike/Copilot/tree/master/Examples>.

license                   : BSD3
license-file              : LICENSE
maintainer                : leepike@galois.com
stability                 : Experimental
category                  : Language, Embedded
build-type                : Simple
extra-source-files        : README.md

author                    : Lee Pike
                          , Robin Morisset
                          , Alwyn Goodloe
                          , Sebastian Niller
                          , Nis Nordby Wegmann

source-repository head
    type:       git
    location:   git://github.com/leepike/copilot-c99.git

library
  default-language        : Haskell2010
  hs-source-dirs          : src
  ghc-options             : -Wall -fwarn-tabs
  ghc-prof-options        : -auto-all -caf-all

  build-depends           : atom >= 1.0.10
                          , base >= 4.3 && < 5
                          , bytestring
                          , containers >= 0.4
                          , copilot-core
                          , csv
                          , directory >= 1.1
                          , process >= 1.0
                          , pretty >= 1.0
                          , random >= 1.0
                          , text >= 0.6
                          , QuickCheck >= 2.4
                          , vector

  exposed-modules         : Copilot.Compile.C99.Test.CheckSpec
                          , Copilot.Compile.C99.Test.Driver
                          , Copilot.Compile.C99.Test.Iteration
                          , Copilot.Compile.C99.Test.ReadCSV
                          , Copilot.Compile.C99
                          , Copilot.Compile.C99.C2A
                          , Copilot.Compile.C99.Common
                          , Copilot.Compile.C99.MetaTable
                          , Copilot.Compile.C99.Params
                          , Copilot.Compile.C99.Phases
                          , Copilot.Compile.C99.PrePostCode
                          , Copilot.Compile.C99.Queue
                          , Copilot.Compile.C99.Witness

executable copilot-c99-qc
  default-language        : Haskell2010
  hs-source-dirs          : test, src
  ghc-options             : -Wall -fwarn-tabs
  main-is                 : CopilotC99Test.hs

  build-depends           : atom >= 1.0.9
                          , base >= 4.3
                          , bytestring
                          , csv
                          , containers >= 0.4
                          , copilot-core
                          , directory >= 1.1
                          , process >= 1.0
                          , pretty >= 1.0
                          , random >= 1.0
                          , text >= 0.6
                          , QuickCheck >= 2.4
                          , vector

  other-modules           : Copilot.Compile.C99
                          , Copilot.Compile.C99.C2A
                          , Copilot.Compile.C99.MetaTable
                          , Copilot.Compile.C99.Params
                          , Copilot.Compile.C99.Phases
                          , Copilot.Compile.C99.PrePostCode
                          , Copilot.Compile.C99.Queue
                          , Copilot.Compile.C99.Witness
                          , Copilot.Compile.C99.Test.CheckSpec
                          , Copilot.Compile.C99.Test.Driver
                          , Copilot.Compile.C99.Test.Iteration
                          , Copilot.Compile.C99.Test.ReadCSV
