cabal-version             : >= 1.10
name                      : copilot-c99
version                   : 3.1
synopsis                  : A compiler for Copilot targeting C99.
description               :
  This package is a back-end from Copilot to C.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.  A tutorial, bug
  reports, and todos are available at
  <https://github.com/Copilot-Language/copilot-discussion>.
  .
  Examples are available at
  <https://github.com/Copilot-Language/Copilot/tree/master/Examples>.

license                   : BSD3
license-file              : LICENSE
maintainer                : Frank Dedden <dev@dedden.net>
stability                 : Experimental
category                  : Language, Embedded
build-type                : Simple
extra-source-files        : README.md
                          , CHANGELOG

author                    : Frank Dedden
                          , Alwyn Goodloe

source-repository head
    type:       git
    location:   git://github.com/Copilot-Language/copilot-c99.git

library
  default-language        : Haskell2010
  hs-source-dirs          : src
  ghc-options             : -Wall -fwarn-tabs
  build-depends           : base                >= 4.9 && < 5
                          , containers          >= 0.4 && < 0.7
                          , directory           >= 1.3 && < 1.4
                          , filepath            >= 1.4 && < 1.5
                          , mtl                 >= 2.2 && < 2.3
                          , pretty              >= 1.1 && < 1.2

                          , copilot-core        >= 3.1   && < 3.2
                          , language-c99        >= 0.1.1 && < 0.2
                          , language-c99-util   >= 0.1.1 && < 0.2
                          , language-c99-simple >= 0.1.1 && < 0.2

  exposed-modules         : Copilot.Compile.C99
                          , Copilot.Compile.C99.Translate
                          , Copilot.Compile.C99.Util
                          , Copilot.Compile.C99.CodeGen
                          , Copilot.Compile.C99.External
                          , Copilot.Compile.C99.Compile
