cabal-version:       >=1.10

name:                copilot-core

version:             0.1

synopsis:            An intermediate representation for Copilot.

description:         Intermediate representation for Copilot.
                     Strictly follows Haskell 2010 except for universal
                     and existential quantification.

author:              Lee Pike, Robin Morisset, Alwyn Goodloe,
                     Sebastian Niller, Nis Nordby Wegmann

license:             BSD3

license-file:        LICENSE

maintainer:          niswegmann@gmail.com

stability:           Experimental

category:            Language, Embedded

build-type:          Simple

extra-source-files:  README.md

library

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall
    -fwarn-tabs
    -auto-all
    -caf-all
    -fno-warn-orphans

    -- Hopefully we can remove these as the Haskell Standard evolves:

    -XExistentialQuantification
    -XRank2Types

  build-depends:
    dlist,
    haskell2010,
    pretty >= 1.0,
    pretty-ncols >= 0.1,
    QuickCheck >= 2.4,
    random > 1.0

  exposed-modules:

    Copilot.Core
    Copilot.Core.Expr
    Copilot.Core.Interpret
--    Copilot.Core.Interpret.Inf
    Copilot.Core.Operators
    Copilot.Core.Spec
    Copilot.Core.Spec.Externals
--    Copilot.Core.Spec.Random
--    Copilot.Core.Spec.Random.Gen
--    Copilot.Core.Spec.Random.Weights
    Copilot.Core.Type
    Copilot.Core.Type.Dynamic
    Copilot.Core.Type.Equality
    Copilot.Core.Type.Show
    Copilot.Core.Type.Uninitialized
    Copilot.Core.PrettyPrint
