cabal-version:       >=1.10
name:                copilot-core
version:             0.2
synopsis:            An intermediate representation for Copilot.
description:         Intermediate representation for Copilot.
                     Strictly follows Haskell 2010 except for universal
                     and existential quantification.
author:              Lee Pike, Robin Morisset, Alwyn Goodloe,
                     Sebastian Niller, Nis Nordby Wegmann
license:             BSD3
license-file:        LICENSE
maintainer:          leepike@gmail.com
stability:           Experimental
category:            Language, Embedded
build-type:          Simple
extra-source-files:  README.md

source-repository head
    type:       git
    location:   git://github.com/niswegmann/copilot-core.git

library

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall
    -fwarn-tabs
    -auto-all
    -caf-all
    -fno-warn-orphans
    --enable-library-profiling

  build-depends:
    containers >= 0.4 && < 1,
    base >= 4.0 && < 5,
    pretty >= 1.0,
    random > 1.0,
    pretty-ncols >= 0.1,
    mtl >= 2.0,
    dlist

  exposed-modules:

    Copilot.Compile.Header.C99
    Copilot.Core
    Copilot.Core.Error
    Copilot.Core.Expr
    Copilot.Core.External
    Copilot.Core.Interpret
    Copilot.Core.Interpret.Eval
    Copilot.Core.Interpret.Render
    Copilot.Core.MakeTags
    Copilot.Core.Operators
    Copilot.Core.Spec
    Copilot.Core.Spec.Locals
    Copilot.Core.Random
    Copilot.Core.Random.Gen
    Copilot.Core.Random.Weights
    Copilot.Core.Type
    Copilot.Core.Type.Dynamic
    Copilot.Core.Type.Equality
    Copilot.Core.Type.Show
    Copilot.Core.Type.Uninitialized
    Copilot.Core.PrettyPrint
    Copilot.Core.Version
