cabal-version:       >=1.10
name:                copilot-core
version:             3.0
synopsis:            An intermediate representation for Copilot.
description:
  Intermediate representation for Copilot.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.  A tutorial, bug
  reports, and todos are available at
  <https://github.com/leepike/copilot-discussion>.
  .
  Examples are available at
  <https://github.com/leepike/Copilot/tree/master/Examples>.

author:              Frank Dedden, Lee Pike, Robin Morisset, Alwyn Goodloe,
                     Sebastian Niller, Nis Nordbyop Wegmann
license:             BSD3
license-file:        LICENSE
maintainer:          Frank Dedden <dev@dedden.net>
stability:           Experimental
category:            Language, Embedded
build-type:          Simple
extra-source-files:  README.md

source-repository head
    type:       git
    location:   https://github.com/Copilot-Language/copilot-core.git

library

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall
    -fwarn-tabs
    -auto-all
    -caf-all
    -fno-warn-orphans

    -- -fpackage-trust
    -- -trust=array
    -- -trust=base
    -- -trust=containers
    -- -- -trust=random

  build-depends:
    containers >= 0.4,
    base >= 4.0 && < 5,
    pretty >= 1.0,
    random > 1.0,
    mtl >= 2.0,
    dlist

  exposed-modules:

    Copilot.Core
    Copilot.Core.Error
    Copilot.Core.Expr
    Copilot.Core.External
    Copilot.Core.Interpret
    Copilot.Core.Interpret.Eval
    Copilot.Core.Interpret.Render
    Copilot.Core.MakeTags
    Copilot.Core.Operators
    Copilot.Core.Spec
    Copilot.Core.Locals
    Copilot.Core.Random
    Copilot.Core.Random.Gen
    Copilot.Core.Random.Weights
    Copilot.Core.Type
    Copilot.Core.Type.Array
    Copilot.Core.Type.Dynamic
    Copilot.Core.Type.Equality
    Copilot.Core.Type.Eq
    Copilot.Core.Type.Show
    Copilot.Core.Type.Read
    Copilot.Core.Type.Uninitialized
    Copilot.Core.PrettyPrint
    Copilot.Core.PrettyDot
