cabal-version             : >= 1.10
name                      : copilot-kind
version                   : 2.1.1
license                   : BSD3
license-file              : LICENSE
maintainer                : jonathan.laurent@ens.fr
stability                 : Experimental
category                  : Language, Embedded
build-type                : Simple
extra-source-files        : README.md

author                    : Jonathan Laurent
			  , Lee Pike
                          , Robin Morisset
                          , Alwyn Goodloe
                          , Sebastian Niller
                          , Nis Nordby Wegmann


executable kind-tests
  default-language        : Haskell2010
  hs-source-dirs          : test, src
  ghc-options             : -Wall -fwarn-tabs 
                            -fno-warn-name-shadowing
                            -fno-warn-unused-binds
                            -fno-warn-unused-imports
                            -fno-warn-missing-signatures


  main-is                 : CopilotKindTest.hs

  build-depends           : base >= 4.3
                          , mtl
                          , containers
                          , copilot-core
                          , copilot-language
                          , pretty
                          , process
                          , parsec
                          , data-default
                          , bimap

  default-extensions      : GADTs
                          , MultiParamTypeClasses 
                          , RankNTypes
                          , KindSignatures
                          , FlexibleInstances
                          , DoAndIfThenElse
                          , GeneralizedNewtypeDeriving
                          , NamedFieldPuns
                          , ScopedTypeVariables
                          , ViewPatterns
                          , LambdaCase
                          , TemplateHaskell

  
