cabal-version             : >= 1.10
name                      : copilot-kind
description:

  Some tools to prove properties on Copilot programs with k-induction model
  checking.
  
version                   : 0.1
license                   : BSD3
license-file              : LICENSE
maintainer                : jonathan.laurent@ens.fr
stability                 : Experimental
category                  : Language, Embedded
build-type                : Simple
extra-source-files        : README.md

author                    : Jonathan Laurent

library
  default-language        : Haskell2010
  hs-source-dirs          : src

  ghc-options             : -Wall -fwarn-tabs 
                            -fno-warn-name-shadowing
                            -fno-warn-unused-binds
                            -fno-warn-unused-imports
                            -fno-warn-missing-signatures

  build-depends           : base >= 4.3
                          , copilot-core
                          , copilot-language
                          , mtl
                          , containers
                          , pretty
                          , process
                          , directory
                          , parsec
                          , data-default
                          , bimap
                          , xml
                          , random

  default-extensions      : GADTs
                          , MultiParamTypeClasses
                          , RankNTypes
                          , KindSignatures
                          , FlexibleInstances
                          , DoAndIfThenElse
                          , GeneralizedNewtypeDeriving
                          , NamedFieldPuns
                          , ScopedTypeVariables
                          , ViewPatterns
                          , LambdaCase
                          , TemplateHaskell
                          
  exposed-modules         : Copilot.Kind
                          , Copilot.Kind.Lib
                          , Copilot.Kind.Light
                          , Copilot.Kind.Kind2
                          , Copilot.Kind.IL
                          , Copilot.Kind.TransSys
                          , Copilot.Kind.Light.Prover
                          , Copilot.Kind.Kind2.Prover
                          
  other-modules           : Copilot.Kind.ProofScheme
                          , Copilot.Kind.Prove
                          , Copilot.Kind.Prover
                          
                          , Copilot.Kind.CoreUtils.Expr
                          , Copilot.Kind.CoreUtils.Operators
                          
                          , Copilot.Kind.IL.PrettyPrint
                          , Copilot.Kind.IL.Spec
                          , Copilot.Kind.IL.Translate
                          
                          , Copilot.Kind.Kind2.AST
                          , Copilot.Kind.Kind2.Output
                          , Copilot.Kind.Kind2.PrettyPrint
                          , Copilot.Kind.Kind2.Translate
                          
                          , Copilot.Kind.Light.SMT
                          , Copilot.Kind.Light.SMTLib
                          
                          , Copilot.Kind.Misc.Cast
                          , Copilot.Kind.Misc.Error
                          , Copilot.Kind.Misc.Invariants
                          , Copilot.Kind.Misc.Operators
                          , Copilot.Kind.Misc.Type
                          , Copilot.Kind.Misc.SExpr
                          , Copilot.Kind.Misc.Utils
                          
                          , Copilot.Kind.TransSys.PrettyPrint
                          , Copilot.Kind.TransSys.Renaming
                          , Copilot.Kind.TransSys.Spec
                          , Copilot.Kind.TransSys.Transform
                          , Copilot.Kind.TransSys.Translate
                          

  
