cabal-version:       >=1.10
name:                copilot-language
version:             0.6
synopsis:            A Haskell-embedded DSL for monitoring hard real-time
                     distributed systems.
description:
  The concrete syntax for Copilot.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.  A tutorial, bug
  reports, and todos are available at
  <https://github.com/niswegmann/copilot-discussion>.  
  .
  Examples are available at
  <https://github.com/leepike/Copilot/tree/master/Examples>.

license:             BSD3
license-file:        LICENSE
author:              Lee Pike, Robin Morisset, Alwyn Goodloe, Sebastian Niller,
                     Nis Nordby Wegmann
maintainer:          leepike@gmail.com
stability:           Experimental
category:            Language, Embedded
build-type:          Simple

source-repository head
    type:       git
    location:   git://github.com/niswegmann/copilot-language.git

library
  default-language: Haskell2010

  hs-source-dirs: src

  build-depends:
    array,
    base >= 4.0 && < 5,
    containers >= 0.4 && < 1,
    data-reify >= 0.6,
    mtl >= 2.0 && < 3,
    ghc-prim >= 0.2 && < 0.3,
    copilot-core >= 0.1
  exposed-modules:
    Copilot
    Copilot.Language
    Copilot.Language.Error
    Copilot.Language.Interpret
    Copilot.Language.Operators.Boolean
    Copilot.Language.Operators.Cast
    Copilot.Language.Operators.Constant
    Copilot.Language.Operators.Eq
    Copilot.Language.Operators.Extern
    Copilot.Language.Operators.Local
    Copilot.Language.Operators.Integral
    Copilot.Language.Operators.Mux
    Copilot.Language.Operators.Ord
    Copilot.Language.Operators.Temporal
    Copilot.Language.Operators.BitWise
    Copilot.Language.Prelude
    Copilot.Language.Reify
--    Copilot.Language.Reify.Graph

  other-modules:
    Copilot.Language.Analyze
    Copilot.Language.Stream
    Copilot.Language.Spec
    System.Mem.StableName.Dynamic
    System.Mem.StableName.Dynamic.Map

  ghc-options:
    -fwarn-tabs
    -auto-all
    -caf-all
    -Wall
