cabal-version:       >=1.10
name:                copilot-libraries
version:             2.2.1
synopsis:            Libraries for the Copilot language.
description:
  Libraries for the Copilot language.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.  A tutorial, bug
  reports, and todos are available at
  <https://github.com/leepike/copilot-discussion>.
  .
  Examples are available at
  <https://github.com/Copilot-Language/Copilot/tree/master/Examples>.

license:             BSD3
license-file:        LICENSE
author:              Lee Pike, Robin Morisset, Alwyn Goodloe, Sebastian Niller,
                     Nis Nordby Wegmann
homepage:            https://github.com/Copilot-Language/copilot-libraries
maintainer:          leepike@gmail.com
stability:           Experimental
category:            Language, Embedded
build-type:          Simple

source-repository head
    type:       git
    location:   git://github.com/Copilot-Language/copilot-libraries.git

library
  default-language: Haskell2010

  hs-source-dirs: src

  build-depends:
    array,
    base >= 4.0 && <= 5.0,
    containers,
    copilot-language == 2.2.1,
    parsec >= 2.0,
    mtl >= 2.0

  exposed-modules:
      Copilot.Library.Libraries
    , Copilot.Library.Clocks
    , Copilot.Library.LTL
    , Copilot.Library.PTLTL
    , Copilot.Library.Statistics
    , Copilot.Library.RegExp
    , Copilot.Library.Utils
    , Copilot.Library.Voting
    , Copilot.Library.Stacks
    , Copilot.Library.MTL

  ghc-options:
    -fwarn-tabs
    -auto-all
    -caf-all
    -Wall
