cabal-version:       >=1.10
name:                copilot-libraries
version:             3.1
synopsis:            Libraries for the Copilot language.
description:
  Libraries for the Copilot language.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.  A tutorial, bug
  reports, and todos are available at
  <https://github.com/Copilot-Language/copilot-discussion>.
  .
  Examples are available at
  <https://github.com/Copilot-Language/Copilot/tree/master/Examples>.

license:             BSD3
license-file:        LICENSE
author:              Frank Dedden, Lee Pike, Robin Morisset, Alwyn Goodloe,
                     Sebastian Niller, Nis Nordby Wegmann
homepage:            https://github.com/Copilot-Language/copilot-libraries
maintainer:          Frank Dedden <dev@dedden.net>
stability:           Experimental
category:            Language, Embedded
build-type:          Simple
extra-source-files:  README.md, CHANGELOG

source-repository head
    type:       git
    location:   git://github.com/Copilot-Language/copilot-libraries.git

library
  default-language: Haskell2010

  hs-source-dirs: src

  build-depends: base             >= 4.9 && < 5

               , array            >= 0.5 && < 0.6
               , containers       >= 0.4 && < 0.7
               , data-reify       >= 0.6 && < 0.7
               , mtl              >= 2.0 && < 2.3
               , parsec           >= 2.0 && < 3.2
               , copilot-language >= 3.1 && < 3.2

  exposed-modules:
      Copilot.Library.Libraries
    , Copilot.Library.Clocks
    , Copilot.Library.LTL
    , Copilot.Library.PTLTL
    , Copilot.Library.Statistics
    , Copilot.Library.RegExp
    , Copilot.Library.Utils
    , Copilot.Library.Voting
    , Copilot.Library.Stacks
    , Copilot.Library.MTL

  ghc-options:
    -fwarn-tabs
    -Wall
